--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="sd">#21ac05</color>
+
+    <color name="bg1_green">#6DB345</color>
+    <color name="bg2_blue">#6DB3ff</color>
+    <!--     <color name="bg2_blue">#6DB3ff</color> -->
+    <color name="bg3_green">#6DB311</color>
 </resources>
