--- a/app/src/main/res/layout/welcome3.xml
+++ b/app/src/main/res/layout/welcome3.xml
@@ -47,6 +47,7 @@
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
+        android:visibility="gone"
         android:gravity="center_horizontal"
         android:text="工作圈和生活圈\n互不干扰"
         android:textColor="#fff"
@@ -58,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
+        android:visibility="gone"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:text="通过平行空间同时运行两个微信账号，将你的工作和生活轻松分离"
