--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="bg2_blue">#6DB3ff</color>
     <!--     <color name="bg2_blue">#6DB3ff</color> -->
     <color name="bg3_green">#6DB311</color>
+
+
+    <color name="colorPrimary_pink">#F06292</color>
+    <color name="colorPrimary_pinkDark">#E91E63</color>
+    <color name="mytextcolor">#F8BBD0</color>
 </resources>
