--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -6,8 +6,8 @@
 
     <TextView
         android:id="@+id/tv_count"
-        android:layout_width="wrap_content"
-        android:text="1"
+        android:layout_width="50dp"
+        android:text="10"
         android:gravity="center"
         android:textColor="#f13a08"
         android:textSize="18sp"
