--- a/app/src/main/res/layout/activity_app_bar_tab_layout_view_pager.xml
+++ b/app/src/main/res/layout/activity_app_bar_tab_layout_view_pager.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:title="动脑学院"
+            app:title="UStory"
             >
         </android.support.v7.widget.Toolbar>
         <android.support.design.widget.TabLayout
