--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="colorPrimary_pink">#F06292</color>
     <color name="colorPrimary_pinkDark">#E91E63</color>
     <color name="mytextcolor">#F8BBD0</color>
+
+    <color name="toolBar_1">#0dd2dc</color>
+    <color name="toolBar_2">#f14202</color>
 </resources>
