--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -96,6 +96,8 @@
                  />
 
             <TextView
+
+                android:id="@+id/tv_gexingzhuangban"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
